--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -1,17 +1,26 @@
-		h1 {
-			color: green;
-		}
-		img {
-			width: 400px;
-		}
-		#thirdDiv {
-			background-color: green;
-			height: 600px;
-			width: 500px;
-			padding: 50px;
-			border: 15px inset blue;
-		}
-		#spandId {
-			font-size: 18px;
-			margin: 50px;
-		}
+body {
+	background-image: url(https://www.cocinayvino.com/wp-content/uploads/2017/03/12262272_l-1200x675.jpg);
+	background-size: cover;
+	color: blue;
+	font-size: 26px;
+}
+h1 {
+	color: green;
+}
+img {
+	width: 400px;
+}
+#thirdDiv {
+	background-color: green;
+	height: 600px;
+	width: 500px;
+	padding: 50px;
+	border: 15px inset blue;
+}
+#spanId {
+	font-size: 18px;
+	margin: 50px;
+}
+.divClass {
+	text-align: center;
+}
